# RustLLMRunner

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  build.rs  docker-compose.yml  r.bat  uploadsrc.bat  uploadsrc.sh
examples/: ollama_client.sh  openai_client.js  openai_client.py
src/: main.rs
src/api/: handlers.rs  mod.rs  routes.rs  server.rs  types.rs
src/cli/: commands.rs
src/config/: mod.rs
src/context/: mod.rs
src/download/: mod.rs
src/hardware/: accelerator.rs  mod.rs
src/inference/: engine.rs  mod.rs  sampler.rs  tokenizer.rs
src/models/: manager.rs  metadata.rs  mod.rs  registry.rs
tests/: api_test.rs  integration_test.rs
