[package]
name = "rust-llm-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web server and API
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GGUF and inference
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"

# Model downloading
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# File handling
tokio-stream = "0.1"
bytes = "1.5"
sha2 = "0.10"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
config = "0.14"
toml = "0.8"
dirs = "5.0"

# Database for model metadata
sled = "0.34"

# Async
async-trait = "0.1"
async-stream = "0.3"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.27"

[dev-dependencies]
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
